ファイル構造整理

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
     <link rel="stylesheet" href="style.css">
-    <script src="const.js"></script>
-    <script src="tama.js"></script>
-    <script src="player.js"></script>
-    <script src="enemy.js"></script>
-    <script src="game.js"></script>
+    <script src="lib/const.js"></script>
+    <script src="lib/tama.js"></script>
+    <script src="lib/player.js"></script>
+    <script src="lib/enemy.js"></script>
+    <script src="lib/game.js"></script>
     <title>SPS_JS</title>
   </head>
   <body>
