--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     </div>
     <canvas id="game" width="640" height="480"></canvas>
     <a href="#" onclick="window.location.reload();">Retry</a>
+    <div class="bgm">
+      <audio src="./assets/bgm.mp3" controls autoplay></audio>
+      <a>BGM: <b>Look at me!!</b> - <font color="#808080">by Mr.O</font></a>
+    </div>
     <div class="desc">
       <p class="abstract">
         FPS（一人称視点）、TPS（三人称視点）に支配された現代のシューティングゲーム界隈に一石を投じる
