プレイヤー画像変更

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </p>
       <ul class="play-manual">
         <li>ゲームは<strong>敵視点</strong>で進行します</li>
-        <li>プレイヤーが操作するのは赤いキャラクターです</li>
+        <li>プレイヤーが操作するのは画面奥の黄色いキャラクター（Mr.K）です</li>
         <li>三角形の物体が弾です（赤: 自分の弾、緑: 敵の弾）。弾は同時に5発までしか撃てません</li>
         <li>敵の弾を避け、自分の弾を敵にうまく当ててください</li>
         <li>※ 現状では敵のライフを0にしてもゲームは終了しません</li>
